add function for missing data summary

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1,12 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Notes:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import numpy as np\n",
+    "#df.columns\n",
+    "#df.info()\n",
+    "#df.describe()\n",
+    "#if(df2.empty): # check if df2 is empty\n",
+    "#d1.iloc[:,0]*=100 # multiply 0 column by 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Moduls:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
@@ -21,13 +48,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PassengerId', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch',\n",
+       "       'Ticket', 'Fare', 'Cabin', 'Embarked'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def  missingDataSummary(df):\n",
-    "    df\n",
-    "    return;\n"
+    "test = pd.read_csv('./data/test.csv')\n",
+    "test.columns\n",
+    "type(test['Fare'])\n",
+    "test.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   miss rate, counts  miss rate, %  err. low, %  err. up, %\n",
+      "0                 87          20.8         17.0        25.0\n",
+      "1                248          59.3         54.4        64.1\n",
+      "2                 83          19.9         16.1        24.0\n",
+      "   miss rate, counts  miss rate, %  err. low, %  err. up, %\n",
+      "0                183          20.5         17.9        23.3\n",
+      "1                550          61.7         58.4        64.9\n",
+      "2                158          17.7         15.3        20.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "train = pd.read_csv('./data/train.csv')\n",
+    "test = pd.read_csv('./data/test.csv')\n",
+    "\n",
+    "def  missingDataSummary(df1):    \n",
+    "    \n",
+    "    nevents=len(df1.index) \n",
+    "    \n",
+    "    import numpy as np\n",
+    "    \n",
+    "    import statsmodels.stats.proportion as ssp\n",
+    "    CP = lambda num,denum : list(ssp.proportion_confint(num,denum, alpha=0.05,method='beta')) #Clopper-Pearson interval based on Beta distribution\n",
+    "\n",
+    "    \n",
+    "    s1=df1.isna().apply(np.sum,axis=1).value_counts() #pandas.Series\n",
+    "    s1=s1.sort_index()\n",
+    "    d1=s1.to_frame(name='miss rate, counts')#convert pandas.Series to pandas DataFrame\n",
+    "    d1['miss rate, %']=d1.apply(lambda x : x[0]/nevents*100 ,axis=1)\n",
+    "    d1['tmp']=d1.apply(lambda x : CP(x[0],nevents) ,axis=1)\n",
+    "    d1[['err. low, %','err. up, %']] = pd.DataFrame(d1.tmp.values.tolist())*100\n",
+    "    del d1['tmp']\n",
+    "    d1=d1.round(decimals=1)\n",
+    "    \n",
+    "    print(d1)\n",
+    "    return;\n",
+    "\n",
+    "missingDataSummary(df1=test)\n",
+    "missingDataSummary(df1=train)\n",
+    "#missingDataSummary(df1=test,df2=test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.20813397129186603\n",
+      "(0.19591448413808524, 0.220762689648619)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.stats.proportion as ssp\n",
+    "print (870./4180)\n",
+    "\n",
+    "print(( ssp.proportion_confint(870,4180, alpha=0.05,method='beta')))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>893</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>363272</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Pclass                              Name     Sex   Age  SibSp  \\\n",
+       "1          893       3  Wilkes, Mrs. James (Ellen Needs)  female  47.0      1   \n",
+       "\n",
+       "   Parch  Ticket  Fare Cabin Embarked  \n",
+       "1      0  363272   7.0   NaN        S  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test[1:2]\n"
    ]
   },
   {
@@ -50,23 +239,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Some notes:"
+    "### Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.columns\n",
-    "#df.info()\n",
-    "#df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -77,7 +255,7 @@
        "(891, 418)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,8 +308,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -357,7 +537,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +549,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
